--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ install:
 before_script:
         - tools/travis-setup-db.sh
         - if [ $PRESET = 'ldap_mnesia' ]; then sudo tools/travis-setup-ldap.sh; fi
+        - if [ $PRESET = 'mysql_redis' ]; then sudo tools/travis-setup-rmq.sh; fi
 script:
     - KEEP_COVER_RUNNING=1 tools/travis-test.sh -p $PRESET -s $RUN_SMALL_TESTS
 
@@ -49,9 +50,6 @@ after_success:
         - test 1 = "$SKIP_COV" || ./rebar3 codecov analyze
         - test 1 = "$SKIP_COV" || codecov --disable=gcov --env PRESET
         - test 1 = "$SKIP_COV" || ./rebar3 coveralls send
-        - if [ -n "${DOCKERHUB_PASS}" ] && [ $PRESET = 'internal_mnesia' ] && [ $TRAVIS_OTP_RELEASE = "19.3" ];
-            then tools/travis-build-and-push-docker.sh;
-          fi
 
 after_script:
         # Upload logs to s3 for debugging
@@ -65,6 +63,9 @@ after_script:
             if [ -n "${GDRIVE_SERVICE_ACCOUNT_CREDENTIALS}" ]; then tools/travis-upload-to-gdrive.sh; fi
         - test 1 = "$SKIP_REPORT_UPLOAD" ||
             tools/travis-secure-erase.sh /tmp/serviceAccountCredentials
+        - if [ -n "${DOCKERHUB_PASS}" ] && [ $PRESET = 'internal_mnesia' ] && [ $TRAVIS_OTP_RELEASE = "19.3" ];
+            then tools/travis-build-and-push-docker.sh;
+          fi
 
 services:
         - redis-server
@@ -83,37 +84,7 @@ env:
   global:
     - RUN_SMALL_TESTS=false
   matrix:
-      # When changing jobs, update EXAMPLES in tools/test-runner.sh
-    - PRESET=small_tests RUN_SMALL_TESTS=true SKIP_RELEASE=1 SKIP_BUILD_TESTS=1
-    - PRESET=internal_mnesia DB=mnesia REL_CONFIG=with-all TLS_DIST=yes
-    - PRESET=mysql_redis DB=mysql REL_CONFIG="with-mysql with-redis"
-    - PRESET=odbc_mssql_mnesia DB=mssql REL_CONFIG=with-odbc
-    - PRESET=ldap_mnesia DB=mnesia REL_CONFIG=with-none
-    - PRESET=elasticsearch_and_cassandra_mnesia DB="elasticsearch cassandra"
-      REL_CONFIG="with-elasticsearch with-cassandra" TESTSPEC=mam.spec
-      ELASTICSEARCH_VERSION=5.6.9 CASSANDRA_VERSION=3.9
-      # In case you want to test with another ODBC driver, uncomment this
-      # - PRESET=odbc_pgsql_mnesia DB=pgsql REL_CONFIG=with-odbc
-
-
-matrix:
-  include:
-    - otp_release: 21.1
-      env: PRESET=dialyzer_only
-           SKIP_RELEASE=1 SKIP_BUILD_TESTS=1 SKIP_COV=1 SKIP_REPORT_UPLOAD=1
-    - otp_release: 20.0
-      env: PRESET=pgsql_mnesia DB=pgsql REL_CONFIG="with-pgsql with-jingle-sip"
-           RUN_SMALL_TESTS=true
-    - otp_release: 21.0
-      env: PRESET=riak_mnesia DB=riak REL_CONFIG="with-riak with-jingle-sip" RUN_SMALL_TESTS=true
-    - language: generic
-      env: PRESET=pkg pkg_PLATFORM=centos7
-           SKIP_COMPILE=1 SKIP_RELEASE=1 SKIP_BUILD_TESTS=1
-           SKIP_COV=1 SKIP_REPORT_UPLOAD=1
-    - language: generic
-      env: PRESET=pkg pkg_PLATFORM=debian_stretch
-           SKIP_COMPILE=1 SKIP_RELEASE=1 SKIP_BUILD_TESTS=1
-           SKIP_COV=1 SKIP_REPORT_UPLOAD=1
+    - PRESET=internal_mnesia DB=pgsql REL_CONFIG=with-all TLS_DIST=yes SKIP_COV=1 SKIP_REPORT_UPLOAD=1 SKIP_BUILD_TESTS=1
 
 notifications:
     webhooks:
